# website-scraper-project

./: .gitignore  README.md  article_sccraper_test.py  fetch_unc.py  pyproject.toml  run_scraper.py  run_trafilatura.py  scraper.py  test_output.txt
website_scraper/: __init__.py  run_scraper.py  scraper.py
